--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "build": "next build",
         "start": "next start"
     },
-    
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
@@ -17,10 +16,13 @@
         "@mui/material": "^5.11.8",
         "@mui/styled-engine-sc": "^5.11.0",
         "axios": "^0.27.2",
+        "bootstrap": "^5.3.3",
         "date-fns": "^2.28.0",
         "next": "12.1.5",
         "react": "^17.0.0",
+        "react-bootstrap": "^2.10.5",
         "react-dom": "^17.0.0",
+        "react-icons": "^5.3.0",
         "react-router-dom": "^5.2.0",
         "sass": "^1.49.0",
         "styled-components": "^5.3.6"
